--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div id="invitation" class="page hidden">
             <video id="mainVideo" class="alpha-video" muted playsinline>
-                <source src="asset/P1.mp4" type="video/mp4">
+                <source src="asset/P1v2.mp4" type="video/mp4">
                 您的瀏覽器不支援影片播放。
             </video>
             
@@ -30,3 +30,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
